--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -13,6 +13,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Horizontal Expanded"
+            android:layout_margin="16dp"/>
+
         <kz.flyingv.expandablelinearlayout.ExpandableLinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -52,6 +58,12 @@
                 android:layout_height="wrap_content" />
 
         </kz.flyingv.expandablelinearlayout.ExpandableLinearLayout>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Vertical Expanded"
+            android:layout_margin="16dp"/>
 
         <kz.flyingv.expandablelinearlayout.ExpandableLinearLayout
             android:layout_width="match_parent"
